--- a/index.html
+++ b/index.html
@@ -24,13 +24,12 @@
                 <option value="no">No</option>
             </select>
         </div>
-        <button onclick="calculatePrice()">Calculate</button>
+        <button onclick="calculatePrice()">Calculate Price</button>
         
         <div class="results" id="results">
             <h2>Pricing Results</h2>
             <p>Selling Price (RSP): <span id="selling-price">$0.00</span></p>
             <p>Gross Profit Margin: <span id="gpm">0%</span></p>
-            <p>Competitive Price Suggestion: <span id="competitive-price">$0.00</span></p>
         </div>
     </div>
 
